# sector-scope-cli

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.claude/skills/help-project/: SKILL.md
.claude/skills/start-dev/: SKILL.md
data/themes/jp/: crypto-japan.yaml
data/themes/us/: bitcoin-miners.yaml  bitcoin-treasury.yaml  crypto-payments.yaml  stablecoin.yaml  vertical-saas.yaml
data/universe/us/: agriculture.yaml  ai.yaml  communications.yaml  consumer-durables.yaml  consumer-non-durables.yaml  consumer-services.yaml  cybersecurity.yaml  distribution-services.yaml  electronic-technology.yaml  energy-minerals.yaml  finance.yaml  health-services.yaml  health-technology.yaml  producer-manufacturing.yaml  retail-trade.yaml  semiconductors.yaml  technology-services.yaml  transportation.yaml  utilities.yaml
docs/: handoff-current.md  spec.md
src/sectorscope/: __init__.py  cli.py  config.py
src/sectorscope/data_themes/mixed/: solana-treasury.yaml
src/sectorscope/data_themes/us/: ai-saas.yaml  crypto.yaml  ethereum-treasury.yaml  security-saas.yaml
src/sectorscope/data_universe/us/: ai.yaml  commercial-services.yaml  communications.yaml  cybersecurity.yaml  (+15 more)
src/sectorscope/formatters/: json_fmt.py  markdown.py  table.py  vega_lite.py
src/sectorscope/models/: output.py  quote.py  universe.py
src/sectorscope/providers/: base.py  cache.py  yfinance_provider.py
src/sectorscope/services/: metrics.py  sorting.py  universe_service.py
tests/: test_json_output.py  test_markdown_output.py  test_metrics.py  test_sorting.py  test_universe_loading.py
